# Onderwijs_EAI_machine_techstack_v3

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PATCH_INSTRUCTIONS.md  README.md  SECURITY.md
reference/eai-hub-agentic-starter-v2/tools/ngbse/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  ngbse.config.yml  pyproject.toml  seeds.jsonl  seeds.leak.test.jsonl  seeds.leak.tmp.jsonl  seeds.second.jsonl  seeds.shodan.test.jsonl  seeds.tmp.jsonl
reference/eai-hub-agentic-starter-v2/tools/ngbse/Legacyfiles/: Dossier_CustomGPT*1456_Feb2025.docx  NGBSE 10.0.py  NGBSE 10.1.py  NGBSE 14.2.py  NGBSE 15.0.py  NGBSE 9.0 online.py  NGBSE-Phoenix .py  NGBSE-Phoenix-Hybride.py  NGBSE-Phoenix-hybride-2.0.py  NGBSE-enterprise-onlineonly.py  NGBSE-enterprise.py  NGBSE12.0.py  NGBSE4.0Gemini.py  NGBSE5.0Gemini.py  NGBSE5.1full.py  NGBSE6.0.py  NGBSE6.1Apex.py  NGBSEalfa.py  NL_Blindspot_Engine_v2_Runbook (1).docx  NL_Blindspot_Engine_v2_Runbook.docx  NextGen_Blindspot_Engine_COMPLETE.docx  Ngbse12.1.py  Ngbse13.0.py  ai_studio_code (1).py  tekst.1.txt  ~$ssier_CustomGPT*1456_Feb2025.docx
reference/eai-hub-agentic-starter-v2/tools/ngbse/Legacyfiles/NGBSE-2.1/: CHANGELOG.md  README.md
reference/eai-hub-agentic-starter-v2/tools/ngbse/ngbse/: cli.py  config.py  dedupe.py  llm_client.py  logger.py  pipeline.py  seedgen.py  validation.py
reference/eai-hub-agentic-starter-v2/tools/ngbse/ou/: MANIFEST.json  findings.csv  findings.jsonl  run.log.jsonl  seeds.next.jsonl
reference/eai-hub-agentic-starter-v2/tools/ngbse/tools/: migrate_seeds.py
(+573 files in other folders)
